fixes before integration